Basic login and auth

--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
               "browserTarget": "front:build:production"
             },
             "development": {
-              "browserTarget": "front:build:development"
+              "browserTarget": "front:build:development",
+              "proxyConfig": "src/proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
@@ -100,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "16554053-71df-48cc-ae58-473168f16aee"
   }
 }
